--- a/css/estilo.css
+++ b/css/estilo.css
@@ -205,5 +205,17 @@ li{
     background-color: greenyellow; /* Cor de fundo do botão quando pressionado */
     color: green;
   }
-  
+  h2{
+    color: white;
+  }
+
+  /* Estilos para dispositivos móveis */
+  @media only screen and (max-width: 768px) {
+    /* Exemplos de estilos para ajustar o layout em dispositivos móveis */
+    /* Aqui você pode adicionar as regras CSS para tornar o site responsivo */
+    /* Por exemplo: */
+    .header-nav {
+    display: none; /* Ocultar a navegação em dispositivos móveis */
+}
+}  
 
